# wmcontroller

./: .gitignore  Cargo.toml  PKGBUILD  README.org
pkg/wmcontroller/: .BUILDINFO  .MTREE  .PKGINFO
pkg/wmcontroller/usr/share/licenses/wmcontroller/: LICENSE.org
src/: application_launcher.rs  configuration.rs  main.rs  search.rs
src/widgets/: mod.rs  search.rs  select.rs
